# Projekt---Graficzna-Baza-Danych-

./: Aplikacja.cpp  Aplikacja.h  CMakeLists.txt  Dodawanie.cpp  Dodawanie.h  Lekarz.cpp  Lekarz.h  Lekarze.txt  Logowanie.cpp  Logowanie.h  Osoba.cpp  Osoba.h  Pacjenci.txt  Pacjent.cpp  Pacjent.h  Pielegniarka.cpp  Pielegniarka.h  Pielegniarki.txt  Sprawdzanie.cpp  Sprawdzanie.h  Szukanie.cpp  Szukanie.h  main.cpp
